--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:theme="@style/Theme.TaskBeats"
         tools:targetApi="31">
         <activity
-            android:name=".TaskDetailActivity"
+            android:name=".presentation.TaskDetailActivity"
             android:exported="false"
             android:label="@string/title_activity_task_detail"
             android:theme="@style/Theme.TaskBeats" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
